유효성 검사 추가, mypage 확인, 수정 추가

--- a/src/main/resources/templates/layout/AgentArticle.html
+++ b/src/main/resources/templates/layout/AgentArticle.html
@@ -12,22 +12,12 @@
 </head>
 <body>
 <article th:fragment="Agent" id="Agent">
-    <h2 class="align-center">고객지원</h2>
-
-    <!-- 미용실 관련 사진 -->
+    <h2 class="major">Agent</h2>
     <span class="image main"><img src="images/pic03.jpg" alt=""/></span>
-
-    <h3 CLASS="align-center">What Can I Help You?</h3>
-
-    <!-- 서비스 버튼 창 -->
-    <div class="container">
-
-        <p></p>
-        <button type="button" style="display:block; width:100%; text-align:center; font-size:1em; padding:2px;"
-                onclick="location.href='/agent'">Q&A
-        </button>
-        <p></p>
-    </div>
+    <p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend
+        sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam.
+        Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum
+        primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 </article>
 </body>
 </html>
