--- a/src/main/resources/templates/layout/Mypage.html
+++ b/src/main/resources/templates/layout/Mypage.html
@@ -19,6 +19,9 @@
         <button type="button" style="display:block; width:100%; text-align:center; font-size:1em; padding:2px;"> 일반
         </button>
         <p></p>
+        <button type="button" style="display:block; width:100%; text-align:center; font-size:1em; padding:2px;"> 사업자
+        </button>
+        <p></p>
 
     </div>
 </article>
