--- a/src/main/resources/templates/layout/ShopArticle.html
+++ b/src/main/resources/templates/layout/ShopArticle.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,117 +14,30 @@
 <body>
 <article th:fragment="ShopArticle" id="Shop">
     <!--  버튼네비게이션, 자바스크립트 추가 예정-->
-    <nav id="shopBtn" class="navbar bg-light">
-        <input type="button" onclick="spot1()" class="btn" id="chapter01" value="본점">
-        <input type="button" onclick="spot2()" class="btn" id="chapter02" value="서면점">
-        <input type="button" onclick="spot3()" class="btn" id="chapter03" value="해운대점">
-        <input type="button" onclick="spot4()" class="btn" id="chapter04" value="연산점">
+
+    <!--    Shop Name 뿌리기-->
+    <nav class="navbar bg-light">
+        <ul style="list-style: none;
+            padding-left: 0px;">
+            <button th:each="shopName :${shopName}">
+                <li th:text="${shopName}"></li>
+            </button>
+        </ul>
     </nav>
     <!-- shop 이미지-->
-    <!--    <span class="image main"><img src="images/pic02.jpg" alt=""/></span>-->
-    <div id="all" style="display: none">
-        <div id="divArea" class="container">
-            <div id="flagShip">
-                <div class="container">
-                    <p></p>
-                    <span class="image main"><img src="images/pic01.jpg" alt=""/></span>
-                    <p></p>
+    <span class="image main"><img src="images/pic02.jpg" alt=""/></span>
 
-                    <h2 class="major">본점</h2>
-                    <p></p>
-                    <p>공지사항 ddddddd고</p>
+    <p>공지 사항</p>
+    <p> - </p>
+    <p> - </p>
 
-                    <h4 class="major">기본 가격</h4>
-                    <p> 이미지 </p>
+    <!-- img 4th -->
+    <span class="image main"><img src="images/pic02.jpg" alt=""/></span>
 
-                    <h4 class="major">디자이너</h4>
-                    <p> 이미지 </p>
+    <!-- 예약 페이지 -->
 
-
-                    <h4 class="major">리뷰</h4>
-                    <p> ========== </p>
-                    <p></p>
-
-                </div>
-            </div>
-
-            <div id="spot1">
-                <div class="container">
-                    <p></p>
-                    <span class="image main"><img src="images/pic01.jpg" alt=""/></span>
-                    <p></p>
-
-                    <h2 class="major">본점</h2>
-                    <p></p>
-                    <p>공지사항 어쩌고저쩌고</p>
-
-                    <h4 class="major">기본 가격</h4>
-                    <p> 이미지 </p>
-
-                    <h4 class="major">디자이너</h4>
-                    <p> 이미지 </p>
-
-
-                    <h4 class="major">리뷰</h4>
-                    <p> ========== </p>
-                    <p></p>
-
-                </div>
-            </div>
-
-            <div id="spot2">
-                <div class="container">
-                    <p></p>
-                    <span class="image main"><img src="images/pic01.jpg" alt=""/></span>
-                    <p></p>
-
-                    <h2 class="major">본점</h2>
-                    <p></p>
-                    <p>공지사항 ddddddd고</p>
-
-                    <h4 class="major">기본 가격</h4>
-                    <p> 이미지 </p>
-
-                    <h4 class="major">디자이너</h4>
-                    <p> 이미지 </p>
-
-
-                    <h4 class="major">리뷰</h4>
-                    <p> ========== </p>
-                    <p></p>
-
-                </div>
-            </div>
-
-            <div id="spot3">
-                <div class="container">
-                    <p></p>
-                    <span class="image main"><img src="images/pic01.jpg" alt=""/></span>
-                    <p></p>
-
-                    <h2 class="major">본점</h2>
-                    <p></p>
-                    <p>공지사항 ddddddd고</p>
-
-                    <h4 class="major">기본 가격</h4>
-                    <p> 이미지 </p>
-
-                    <h4 class="major">디자이너</h4>
-                    <p> 이미지 </p>
-
-
-                    <h4 class="major">리뷰</h4>
-                    <p> ========== </p>
-                    <p></p>
-
-                </div>
-            </div>
-        </div>
-        <button type="button" class="btn btn-sm" onclick="location.href='/appointment'"> 예약하러 하기</button>
-    </div>
-</article>
-</body>
-</html>
+    <button type="button" class="btn btn-sm" onclick="location.href='/apoint'"> 예약하러 하기</button>
+    <button type="button" class="btn btn-sm" style="float: right">리뷰</button>
 
 </article>
 </body>
