--- a/src/main/resources/templates/myPageUser.html
+++ b/src/main/resources/templates/myPageUser.html
@@ -1,13 +1,13 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>MyPage-Owner-</title>
+    <title>My Page </title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
             crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -21,40 +21,31 @@
     </div>
 </header>
 
-
 <main>
     <div class="container">
         <div class="container-fluid">
-            <form class="border border-secondary rounded-3 p-5">
+            <form class="border border-secondary rounded-3 p-5" action="/myPageUserUpdate">
 
                 <!-- 네비  -->
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
                     <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home"
-                            type="button" role="tab" aria-controls="nav-home" aria-selected="true">예약 관리
+                            type="button" role="tab" aria-controls="nav-home" aria-selected="true">My Page
                     </button>
-
-
-                    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile"
-                            type="button" role="tab" aria-controls="nav-profile" aria-selected="false"> 디자이너 관리
-                    </button>
-
 
                     <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact"
-                            type="button" role="tab" aria-controls="nav-contact" aria-selected="false"> 공지사항, 리뷰 관리
+                            type="button" role="tab" aria-controls="nav-contact" aria-selected="false"> ext
                     </button>
 
                 </div>
 
                 <!--------------------------------------------------------------------------------------------------------------->
                 <!-- 내용 넣는 곳 -->
-
-                <section>
                 <div class="p-5">
                     <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
                             <!--  회원정보 타이틀 -->
                             <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
-                                예약 관리
+                                회원정보
                             </div>
 
 
@@ -66,7 +57,7 @@
                                     </div>
                                     <!--  회원 이름 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userName" class="form-control" type="text" value="이름 보여질 곳" readonly>
+                                        <input id="userName" class="form-control" type="text" value="이름 보여질 곳" th:value="${session.user.userName}" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -79,7 +70,7 @@
                                     </div>
                                     <!--  회원 이름 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userId" class="form-control" type="text" value="ID 보여질 곳" readonly>
+                                        <input id="userId" class="form-control" type="text" th:value="${session.user.userId}" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -92,7 +83,7 @@
                                     </div>
                                     <!--  회원 Pw / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userPw" class="form-control" type="text" value="PW 보여질 곳" readonly>
+                                        <input id="userPw" class="form-control" type="text" th:value="${session.user.userPw}" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -105,7 +96,7 @@
                                     </div>
                                     <!--  회원 phone / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userPh" class="form-control" type="tel" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" value="010-0000-0000" readonly>
+                                        <input id="userPh" class="form-control" type="tel" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" th:value="${session.user.userPh}" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -114,32 +105,30 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userMail" class="col-sm-3 col-form-label">Phone</label>
+                                        <label for="userMail" class="col-sm-3 col-form-label">Email</label>
                                     </div>
                                     <!--  회원 Email / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userMail" class="form-control" type="email" value="email 보여질 곳" readonly>
+                                        <input id="userMail" class="form-control" type="email" th:value="${session.user.userMail}" readonly>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">
-                                <button class="btn btn-outline-dark me-md-2" type="button">수정</button>
-                                <button class="btn btn-outline-secondary" type="button">취소</button>
+                                <button class="btn btn-outline-dark me-md-2" type="button" onclick="location.href='/myPageUserUpdate'">수정</button>
+                                <button id="btn-back" class="btn btn-outline-dark me-md-2" type="button" onclick="location.href='/main'">Home</button>
+
                             </div>
                         </div>
                     </div>
                 </div>
-                </section>
-
-                <section>
-                    ddd
-                </section>
             </form>
         </div>
     </div>
 
 </main>
+
+
 <!--footer-->
 <footer th:replace="layout/Footer :: mainFooter"></footer>
 
