--- a/src/main/resources/templates/appointment.html
+++ b/src/main/resources/templates/appointment.html
@@ -1,6 +1,6 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Appointment /예약 페이지 </title>
+    <title>예약 페이지 </title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,6 +21,11 @@
     <link rel="stylesheet" href="assets/css/calender.css">
     <script src="assets/js/calender.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.kr.min.js"></script>
+
+    <!--    카카오 결제를 위한 JS-->
+    <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
+    <!--    결제 JS-->
+    <script type="text/javascript" src="useJs/payment.js"></script>
 
     <!--    swal(alert 대체)-->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -47,10 +52,10 @@
 
 <!--예약 페이지도 마찬가지로 template x -->
 
-<header class="container mt-3 py-5">
-    <div class="container-fluid p-4 bg-light bg-gradient">
-        <div class="container p-5 rounded">
-            <h1 class="display-5 text-center fw-semibold text-muted">Sign Up</h1>
+<header class="container mt-3">
+    <div class="container-fluid bg-light bg-gradient">
+        <div class="container rounded">
+            <h1 class="display-5 text-center fw-semibold text-muted">예약 페이지</h1>
         </div>
     </div>
 </header>
@@ -83,7 +88,7 @@
                                                            placeholder="시간을 선택해 주세요" name="Time" disabled="true">
                                                     <!--값 뜨는곳-->
                                                     <span class="time">값을 정해주세요.</span>
-<!--                                                    dp2에 datepicker가 있어서 disavbled로 막아 값이 안가져와서 하이든 인풋 태그를 만듦-->
+                                                    <!--                                                    dp2에 datepicker가 있어서 disavbled로 막아 값이 안가져와서 하이든 인풋 태그를 만듦-->
                                                     <input hidden type="text" id="apointTime" name="apointTime">
                                                 </div>
                                             </div>
@@ -258,10 +263,10 @@
                         <input hidden name="apointUserName" th:value="${session.user.userName}">
 
                         <div class="d-grid gap-2">
-                            <button class="btn btn-outline-dark" type="button" id="btn-apoint" onclick="checkAll()">
-                                Sign Up
+                            <button class="btn btn-outline-dark" type="button" id="btn-apoint" onclick="payment()">
+                                결제하기
                             </button>
-                            <button class="btn btn-outline-secondary" type="button">Cancel</button>
+                            <button class="btn btn-outline-secondary" type="button">취소</button>
                         </div>
                     </div>
 
