--- a/src/main/resources/templates/myPageUser.html
+++ b/src/main/resources/templates/myPageUser.html
@@ -125,8 +125,8 @@
                             </div>
 
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">
-                                <button class="btn btn-outline-dark me-md-2" type="button">수정</button>
-                                <button class="btn btn-outline-secondary" type="button">취소</button>
+                                <button class="btn btn-outline-dark me-md-2" type="button" onclick="location.href='/myPageUserUpdate'">수정</button>
+                                <button id="btn-back" class="btn btn-outline-dark me-md-2" type="button" onclick="location.href='/main'">Home</button>
                             </div>
                         </div>
                     </div>
