--- a/src/main/resources/templates/myPageShop.html
+++ b/src/main/resources/templates/myPageShop.html
@@ -34,82 +34,173 @@
 </header>
 
 
+<body>
+<!-- 회원가입 영역부터는 템플릿 사용 x bootstrap 사용 디자인은 기능 중간 집계 이후 고칠 예정-->
+
+<header class="container mt-3 py-5">
+    <div class="container-fluid p-4 bg-light bg-gradient">
+        <div class="container p-5 rounded">
+            <h1 class="display-5 text-center fw-semibold text-muted"></h1>
+        </div>
+    </div>
+</header>
+
+
 <main>
     <div class="container">
         <div class="container-fluid">
             <form class="border border-secondary rounded-3 p-5">
+
+                <!-- 네비  -->
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
-
-                    <!-- 정보 탭 -->
                     <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home"
-                            type="button" role="tab" aria-controls="nav-home" aria-selected="true">내 정보
+                            type="button" role="tab" aria-controls="nav-home" aria-selected="true">My Page
                     </button>
 
 
-                    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile"
-                            type="button" role="tab" aria-controls="nav-profile" aria-selected="false">예약 목록
-                    </button>
-                    <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact"
-                            type="button" role="tab" aria-controls="nav-contact" aria-selected="false">기타
+                    <button class="nav-link" id="nav-apoint-tab" data-bs-toggle="tab" data-bs-target="#nav-apoint"
+                            type="button" role="tab" aria-controls="nav-apoint" aria-selected="false"> 예약 목록
                     </button>
                 </div>
 
-
+                <!--------------------------------------------------------------------------------------------------------------->
+                <!--                마이페이지 회원정보 영역-->
                 <!-- 내용 넣는 곳 -->
-
-                <div class="tab-content" id="nav-tabContent">
-                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"
-                         tabindex="0">
-                        <!--  내용 영역 -->
-                        <div class="p-4">
-                            <div class="h5 pb-2 mb-4 text-black border-bottom border-secondary">
-                                <h3>회원정보</h3>
+                <div class="p-5">
+                    <div class="tab-content" id="nav-tabContent">
+                        <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
+                             aria-labelledby="nav-home-tab" tabindex="0">
+                            <!--  회원정보 타이틀 -->
+                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
+                                회원정보
                             </div>
-                            <div class="mb-3 row">
-                                <label for="name" class="col-sm-3 col-form-label">Shop Name</label>
-                                <div class="col-sm-9">
-<!--                                    Shop Name-->
-                                    <input type="text" readonly class="form-control-plaintext" id="name" th:value="${session.shop.shopName}">
+
+
+                            <!--  회원 이름 / 텍스트 라벨-->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="userName" class="col-sm-3 col-form-label">이름</label>
+                                    </div>
+                                    <!--  회원 이름 / 텍스트 뷰 라벨 -->
+                                    <div class="col-10">
+                                        <input id="userName" class="form-control" type="text" value="이름 보여질 곳"
+                                               th:value="${session.user.userName}" readonly>
+                                    </div>
                                 </div>
-                                <label for="staticEmail" class="col-sm-3 col-form-label">Email</label>
-                                <div class="col-sm-9">
-                                    <input type="text" readonly class="form-control-plaintext" id="staticEmail" th:value="${session.shop.ownerMail}">
+                            </div>
+
+                            <!-- 회원정보 아이디  -->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="userId" class="col-sm-3 col-form-label">ID</label>
+                                    </div>
+                                    <!--  회원 이름 / 텍스트 뷰 라벨 -->
+                                    <div class="col-10">
+                                        <input id="userId" class="form-control" type="text" value="ID 보여질 곳"
+                                               th:value="${session.user.userId}" readonly>
+                                    </div>
                                 </div>
-                                <label for="shopTel" class="col-sm-3 col-form-label">Shop Tel</label>
-                                <div class="col-sm-9">
-                                    <input type="text" readonly class="form-control-plaintext" id="shopTel" th:value="${session.shop.shopTel}">
+                            </div>
+
+                            <!-- 회원정보 Pw  -->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="userPw" class="col-sm-3 col-form-label">PW</label>
+                                    </div>
+                                    <!--  회원 Pw / 텍스트 뷰 라벨 -->
+                                    <div class="col-10">
+                                        <input id="userPw" class="form-control" type="text"
+                                               th:value="${session.user.userPw}" value="PW 보여질 곳" readonly>
+                                    </div>
                                 </div>
-                                <label for="Phone" class="col-sm-3 col-form-label">전화번호</label>
-                                <div class="col-sm-9">
-                                    <input type="text" readonly class="form-control-plaintext" id="Phone"
-                                           value="010-1111-1111">
+                            </div>
+
+                            <!-- 회원정보 phone  -->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="userPh" class="col-sm-3 col-form-label">Phone</label>
+                                    </div>
+                                    <!--  회원 phone / 텍스트 뷰 라벨 -->
+                                    <div class="col-10">
+                                        <input id="userPh" class="form-control" type="tel"
+                                               pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" th:value="${session.user.userPh}"
+                                               readonly>
+                                    </div>
                                 </div>
+                            </div>
+
+                            <!-- 회원정보 Email  -->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="userMail" class="col-sm-3 col-form-label">Phone</label>
+                                    </div>
+                                    <!--  회원 Email / 텍스트 뷰 라벨 -->
+                                    <div class="col-10">
+                                        <input id="userMail" class="form-control" type="email"
+                                               th:value="${session.user.userMail}" value="email 보여질 곳" readonly>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">
+                                <button class="btn btn-outline-dark me-md-2" type="button"
+                                        onclick="location.href='/myPageUserUpdate'">수정
+                                </button>
+                                <button id="btn-back" class="btn btn-outline-dark me-md-2" type="button"
+                                        onclick="location.href='/main'">Home
+                                </button>
                             </div>
                         </div>
                     </div>
-
+                    <div class="tab-content" id="nav-apoint-tabContent">
+                        <div class="tab-pane fade show" id="nav-apoint" role="tabpanel"
+                             aria-labelledby="nav-apoint-tab" tabinde>
+                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
+                                예약 내역
+                            </div>
+                            <table th:if="${session.apoints} != null" class="table">
+                                <thead class="table-dark">
+                                <tr>
+                                    <th>지점</th>
+                                    <th>디자이너</th>
+                                    <th>컷</th>
+                                    <th>펌</th>
+                                    <th>염색</th>
+                                    <th>클리닉</th>
+                                    <th>날짜</th>
+                                    <th>시간</th>
+                                </tr>
+                                </thead>
+                                <tbody class="table-striped">
+                                <tr th:each="apointsList:${session.apoints}">
+                                    <td th:text="${apointsList.apointShop}"></td>
+                                    <td th:text="${apointsList.apointDesigner}"></td>
+                                    <td th:text="${apointsList.apointCut}"></td>
+                                    <td th:text="${apointsList.apointPerm}"></td>
+                                    <td th:text="${apointsList.apointColor}"></td>
+                                    <td th:text="${apointsList.apointClinic}"></td>
+                                    <td th:text="${apointsList.apointDate}"></td>
+                                    <td th:text="${apointsList.apointTime}"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <h2 th:if="${session.apoints} == null">조회된 예약내역이 없습니다.</h2>
+                        </div>
+                    </div>
                 </div>
+            </form>
         </div>
-        <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab"
-             tabindex="0">
-            <!--  내용 영역 -->
-            <div class="p-4">
+    </div>
 
-            </div>
-        </div>
-        <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab"
-             tabindex="0">
-            <!--  내용 영역 -->
-            <div class="p-4">
-                <h4>
-                    기타 영역
-                </h4>
-            </div>
-        </div>
-    </div>
-    </form>
-    </div>
-    </div>
+
+    <!--    마이페이지 예약 목록 영역-->
+
 
 </main>
 
@@ -117,4 +208,3 @@
 <footer th:replace="layout/Footer :: mainFooter"></footer>
 
 </body>
-</html>
