--- a/src/main/resources/templates/myPageUser.html
+++ b/src/main/resources/templates/myPageUser.html
@@ -1,6 +1,6 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>MyPage</title>
+    <title>마이페이지</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -8,9 +8,26 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
             crossorigin="anonymous"></script>
-<!--    <script>-->
-<!--        $(document).r-->
-<!--    </script>-->
+    <!--    <script>-->
+    <!--        $(document).r-->
+    <!--    </script>-->
+
+    <!--    마이페이지로 세션 값 없이 바로 접근시 처리하기 위한 스크립트-->
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        if ([[${message}]] != null) {
+            var message = [[${message}]];
+            alert(message);
+            location.href = "/main";
+        }
+        /*]]>*/
+    </script>
+    <style>
+        .table th, .table td {
+            text-align: center;
+            vertical-align: middle !important;
+        }
+    </style>
 </head>
 
 <body>
@@ -37,22 +54,18 @@
                     </button>
 
 
-                    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile"
-                            type="button" role="tab" aria-controls="nav-profile" aria-selected="false"> Appointment List
+                    <button class="nav-link" id="nav-apoint-tab" data-bs-toggle="tab" data-bs-target="#nav-apoint"
+                            type="button" role="tab" aria-controls="nav-apoint" aria-selected="false"> 예약 목록
                     </button>
-
-
-                    <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact"
-                            type="button" role="tab" aria-controls="nav-contact" aria-selected="false"> ext
-                    </button>
-
                 </div>
 
                 <!--------------------------------------------------------------------------------------------------------------->
+                <!--                마이페이지 회원정보 영역-->
                 <!-- 내용 넣는 곳 -->
                 <div class="p-5">
                     <div class="tab-content" id="nav-tabContent">
-                        <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
+                        <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
+                             aria-labelledby="nav-home-tab" tabindex="0">
                             <!--  회원정보 타이틀 -->
                             <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
                                 회원정보
@@ -67,7 +80,8 @@
                                     </div>
                                     <!--  회원 이름 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userName" class="form-control" type="text" value="이름 보여질 곳" th:value="${session.user.userName}" readonly>
+                                        <input id="userName" class="form-control" type="text" value="이름 보여질 곳"
+                                               th:value="${session.user.userName}" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -80,7 +94,8 @@
                                     </div>
                                     <!--  회원 이름 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userId" class="form-control" type="text" value="ID 보여질 곳" th:value="${session.user.userId}" readonly>
+                                        <input id="userId" class="form-control" type="text" value="ID 보여질 곳"
+                                               th:value="${session.user.userId}" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -93,7 +108,8 @@
                                     </div>
                                     <!--  회원 Pw / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userPw" class="form-control" type="text" th:value="${session.user.userPw}" value="PW 보여질 곳" readonly>
+                                        <input id="userPw" class="form-control" type="text"
+                                               th:value="${session.user.userPw}" value="PW 보여질 곳" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -106,7 +122,9 @@
                                     </div>
                                     <!--  회원 phone / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userPh" class="form-control" type="tel" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" th:value="${session.user.userPh}" readonly>
+                                        <input id="userPh" class="form-control" type="tel"
+                                               pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" th:value="${session.user.userPh}"
+                                               readonly>
                                     </div>
                                 </div>
                             </div>
@@ -119,21 +137,66 @@
                                     </div>
                                     <!--  회원 Email / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userMail" class="form-control" type="email" th:value="${session.user.userMail}" value="email 보여질 곳" readonly>
+                                        <input id="userMail" class="form-control" type="email"
+                                               th:value="${session.user.userMail}" value="email 보여질 곳" readonly>
                                     </div>
                                 </div>
                             </div>
 
+
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">
-                                <button class="btn btn-outline-dark me-md-2" type="button" onclick="location.href='/myPageUserUpdate'">수정</button>
-                                <button id="btn-back" class="btn btn-outline-dark me-md-2" type="button" onclick="location.href='/main'">Home</button>
+                                <button class="btn btn-outline-dark me-md-2" type="button"
+                                        onclick="location.href='/myPageUserUpdate'">수정
+                                </button>
+                                <button id="btn-back" class="btn btn-outline-dark me-md-2" type="button"
+                                        onclick="location.href='/main'">Home
+                                </button>
                             </div>
+                        </div>
+                    </div>
+                    <div class="tab-content" id="nav-apoint-tabContent">
+                        <div class="tab-pane fade show" id="nav-apoint" role="tabpanel"
+                             aria-labelledby="nav-apoint-tab" tabinde>
+                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
+                                예약 내역
+                            </div>
+                            <table th:if="${session.apoints} != null" class="table">
+                                <thead class="table-dark">
+                                <tr>
+                                    <th>지점</th>
+                                    <th>디자이너</th>
+                                    <th>컷</th>
+                                    <th>펌</th>
+                                    <th>염색</th>
+                                    <th>클리닉</th>
+                                    <th>날짜</th>
+                                    <th>시간</th>
+                                </tr>
+                                </thead>
+                                <tbody class="table-striped">
+                                <tr th:each="apointsList:${session.apoints}">
+                                    <td th:text="${apointsList.apointShop}"></td>
+                                    <td th:text="${apointsList.apointDesigner}"></td>
+                                    <td th:text="${apointsList.apointCut}"></td>
+                                    <td th:text="${apointsList.apointPerm}"></td>
+                                    <td th:text="${apointsList.apointColor}"></td>
+                                    <td th:text="${apointsList.apointClinic}"></td>
+                                    <td th:text="${apointsList.apointDate}"></td>
+                                    <td th:text="${apointsList.apointTime}"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <h2 th:if="${session.apoints} == null">조회된 예약내역이 없습니다.</h2>
                         </div>
                     </div>
                 </div>
             </form>
         </div>
     </div>
+
+
+    <!--    마이페이지 예약 목록 영역-->
+
 
 </main>
 
