수정 끝, 유효성 체크 및 다듬을 필요성 있음

--- a/src/main/resources/templates/myPageUser.html
+++ b/src/main/resources/templates/myPageUser.html
@@ -92,7 +92,7 @@
                                     <div class="col-2">
                                         <label for="userId" class="col-sm-3 col-form-label">ID</label>
                                     </div>
-                                    <!--  회원 이름 / 텍스트 뷰 라벨 -->
+                                    <!--  회원 아이디 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
                                         <input id="userId" class="form-control" type="text" value="ID 보여질 곳"
                                                th:value="${session.user.userId}" readonly>
