--- a/src/main/resources/templates/myPageShopUpdate.html
+++ b/src/main/resources/templates/myPageShopUpdate.html
@@ -1,58 +1,24 @@
+<!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>마이페이지</title>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            crossorigin="anonymous"></script>
-
-    <!--    마이페이지로 세션 값 없이 바로 접근시 처리하기 위한 스크립트-->
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-        if ([[${message}]] != null) {
-            // console.log("테스트");
-            var message = [[${message}]];
-            alert(message);
-            location.href = "/main";
-        }
-        /*]]>*/
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#btn-back").on("click", function () {
+                history.back();
+            });
+        });
     </script>
 </head>
-
 <body>
-<!-- 회원가입 영역부터는 템플릿 사용 x bootstrap 사용 디자인은 기능 중간 집계 이후 고칠 예정-->
-
-<header class="container mt-3 py-5">
-    <div class="container-fluid p-4 bg-light bg-gradient">
-        <div class="container p-5 rounded">
-            <h1 class="display-5 text-center fw-semibold text-muted"></h1>
-        </div>
-    </div>
-</header>
-
 <main>
     <div class="container">
         <div class="container-fluid">
-            <form class="border border-secondary rounded-3 p-5">
-
-                <!-- 네비  -->
-                <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                    <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home"
-                            type="button" role="tab" aria-controls="nav-home" aria-selected="true">My Page
-                    </button>
-
-
-                    <button class="nav-link" id="nav-apoint-tab" data-bs-toggle="tab" data-bs-target="#nav-apoint"
-                            type="button" role="tab" aria-controls="nav-apoint" aria-selected="false"> 예약 목록
-                    </button>
-                </div>
-
-                <!--------------------------------------------------------------------------------------------------------------->
-                <!--                마이페이지 회원정보 영역-->
-                <!-- 내용 넣는 곳 -->
+            <form action="/shopUpdate" class="border border-secondary rounded-3 p-5">
                 <div class="p-5">
                     <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
@@ -70,7 +36,7 @@
                                     </div>
                                     <!--  Shop 아이디 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="shopId" class="form-control" type="text" value="ID 보여질 곳"
+                                        <input id="shopId" name="shopId" class="form-control" type="text" value="ID 보여질 곳"
                                                th:value="${session.shop.shopId}" readonly>
                                     </div>
                                 </div>
@@ -84,7 +50,7 @@
                                     </div>
                                     <!--  Shop Pw / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="shopPw" class="form-control" type="text"
+                                        <input id="shopPw" name="shopPw" class="form-control" type="text"
                                                th:value="${session.shop.shopPw}" value="PW 보여질 곳" readonly>
                                     </div>
                                 </div>
@@ -98,8 +64,8 @@
                                     </div>
                                     <!--  가게 이름 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="shopName" class="form-control" type="text" value="이름 보여질 곳"
-                                               th:value="${session.shop.shopName}" readonly>
+                                        <input id="shopName" name="shopName" class="form-control" type="text" value="이름 보여질 곳"
+                                               th:value="${session.shop.shopName}">
                                     </div>
                                 </div>
                             </div>
@@ -112,7 +78,7 @@
                                     </div>
                                     <!--  회원 phone / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="shopTel" class="form-control" type="tel"
+                                        <input id="shopTel" name="shopTel" class="form-control" type="tel"
                                                th:value="${session.shop.shopTel}"
                                                readonly>
                                     </div>
@@ -127,7 +93,7 @@
                                     </div>
                                     <!--  회원 Email / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="shopAddrNum" class="form-control" type="text"
+                                        <input id="shopAddrNum" name="shopAddrNum" class="form-control" type="text"
                                                th:value="${session.shop.shopAddrNum}" value="우편번호" readonly>
                                     </div>
                                 </div>
@@ -139,7 +105,7 @@
                                         <label for="shopAddrRoad" class="col-form-label">신주소</label>
                                     </div>
                                     <div class="col-10">
-                                        <input id="shopAddrRoad" class="form-control" type="text"
+                                        <input id="shopAddrRoad" name="shopAddrRoad"class="form-control" type="text"
                                                th:value="${session.shop.shopAddrRoad}" value="신주소" readonly>
                                     </div>
                                 </div>
@@ -152,7 +118,7 @@
                                         <label for="shopAddrJibun" class="col-form-label">구주소</label>
                                     </div>
                                     <div class="col-10">
-                                        <input id="shopAddrJibun" class="form-control" type="text"
+                                        <input id="shopAddrJibun" name="shopAddrJibun" class="form-control" type="text"
                                                th:value="${session.shop.shopAddrJibun}" value="구주소" readonly>
                                     </div>
                                 </div>
@@ -165,7 +131,7 @@
                                         <label for="shopAddrDetail" class="col-form-label">상세주소</label>
                                     </div>
                                     <div class="col-10">
-                                        <input id="shopAddrDetail" class="form-control" type="text"
+                                        <input id="shopAddrDetail" name="shopAddrDetail" class="form-control" type="text"
                                                th:value="${session.shop.shopAddrDetail}" value="상세주소" readonly>
                                     </div>
                                 </div>
@@ -178,8 +144,8 @@
                                         <label for="ownerName" class="col-form-label">원장 명</label>
                                     </div>
                                     <div class="col-10">
-                                        <input id="ownerName" class="form-control" type="text"
-                                               th:value="${session.shop.ownerName}" value="원장명" readonly>
+                                        <input id="ownerName" name="ownerName" class="form-control" type="text"
+                                               th:value="${session.shop.ownerName}" value="원장명">
                                     </div>
                                 </div>
                             </div>
@@ -191,7 +157,7 @@
                                         <label for="ownerPh" class="col-form-label">휴대폰 번호</label>
                                     </div>
                                     <div class="col-10">
-                                        <input id="ownerPh" class="form-control" type="text"
+                                        <input id="ownerPh" name="ownerPh" class="form-control" type="text"
                                                th:value="${session.shop.ownerPh}" value="휴대폰 번호" readonly>
                                     </div>
                                 </div>
@@ -204,7 +170,7 @@
                                         <label for="ownerMail" class="col-form-label">메일</label>
                                     </div>
                                     <div class="col-10">
-                                        <input id="ownerMail" class="form-control" type="text"
+                                        <input id="ownerMail" name="ownerMail" class="form-control" type="text"
                                                th:value="${session.shop.ownerMail}" value="원장 메일" readonly>
                                     </div>
                                 </div>
@@ -218,9 +184,9 @@
                                     </div>
                                     <div class="col-10">
                                         <!-- M일때는 남자, F일때는 여자-->
-                                        <input id="ownerGen" class="form-control" type="text"
+                                        <input id="ownerGen" name="ownerGen" class="form-control" type="text"
                                                th:if="${session.shop.ownerGen} =='M' " value="남자" readonly>
-                                        <input id="ownerGen" class="form-control" type="text"
+                                        <input id="ownerGen" name="ownerGen" class="form-control" type="text"
                                                th:if="${session.shop.ownerGen} =='F' " value="여자" readonly>
                                     </div>
                                 </div>
@@ -228,64 +194,15 @@
 
 
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">
-                                <button class="btn btn-outline-dark me-md-2" type="button"
-                                        onclick="location.href='/myPageShopUpdate'">수정
-                                </button>
-                                <button id="btn-back" class="btn btn-outline-dark me-md-2" type="button"
-                                        onclick="location.href='/main'">Home
-                                </button>
+                                <button id="btn-update" class="btn btn-outline-dark me-md-2" type="submit">수정 완료</button>
+                                <button id="btn-back" class="btn btn-outline-dark me-md-2" type="button">취소</button>
                             </div>
-                        </div>
-                    </div>
-                    <div class="tab-content" id="nav-apoint-tabContent">
-                        <div class="tab-pane fade show" id="nav-apoint" role="tabpanel"
-                             aria-labelledby="nav-apoint-tab" tabinde>
-                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
-                                예약 내역
-                            </div>
-                            <table th:if="${session.apoints} != null" class="table">
-                                <thead class="table-dark">
-                                <tr>
-                                    <th>지점</th>
-                                    <th>디자이너</th>
-                                    <th>컷</th>
-                                    <th>펌</th>
-                                    <th>염색</th>
-                                    <th>클리닉</th>
-                                    <th>날짜</th>
-                                    <th>시간</th>
-                                </tr>
-                                </thead>
-                                <tbody class="table-striped">
-                                <tr th:each="apointsList:${session.apoints}">
-                                    <td th:text="${apointsList.apointShop}"></td>
-                                    <td th:text="${apointsList.apointDesigner}"></td>
-                                    <td th:text="${apointsList.apointCut}"></td>
-                                    <td th:text="${apointsList.apointPerm}"></td>
-                                    <td th:text="${apointsList.apointColor}"></td>
-                                    <td th:text="${apointsList.apointClinic}"></td>
-                                    <td th:text="${apointsList.apointDate}"></td>
-                                    <td th:text="${apointsList.apointTime}"></td>
-                                </tr>
-                                </tbody>
-                            </table>
-                            <h2 th:if="${session.apoints} == null">조회된 예약내역이 없습니다.</h2>
                         </div>
                     </div>
                 </div>
             </form>
         </div>
     </div>
-
-
-    <!--    마이페이지 예약 목록 영역-->
-
-
 </main>
-
-<!--footer-->
-<footer th:replace="layout/Footer :: mainFooter"></footer>
-
-</body>
 </body>
 </html>
