리뷰 게시글 목록, 글 등록

--- a/src/main/resources/templates/layout/ShopArticle.html
+++ b/src/main/resources/templates/layout/ShopArticle.html
@@ -37,7 +37,7 @@
     <!-- 예약 페이지 -->
 
     <button type="button" class="btn btn-sm" onclick="location.href='/apoint'"> 예약하러 하기</button>
-    <button type="button" class="btn btn-sm" style="float: right">리뷰</button>
+    <button type="button" class="btn btn-sm" style="float: right" onclick="location.href='/shopReview'">리뷰</button>
 
 </article>
 </body>
