--- a/src/main/resources/templates/layout/Header.html
+++ b/src/main/resources/templates/layout/Header.html
@@ -24,17 +24,25 @@
     <!-- main navigation / 메인 네비게이션 카테고리-->
     <nav>
         <ul>
-<!--            로그인-->
-            <li th:if="${session.user == null} and ${session.shop == null}" ><a id="link-login" href="#Login">Login</a>
+            <!--유저 아이디 세션을 사용하기 위함-->
+            <div th:if="${session.user} != null">
+                <input hidden id="apointUserId" name="apointUserId" th:value="${session.user.userId}">
+            </div>
+            <!--            로그인-->
+            <li th:if="${session.user == null} and ${session.shop == null}"><a id="link-login" href="#Login">Login</a>
             </li>
-<!--            로그아웃-->
-            <li style="border-right: 1px white" th:style="${session.user} != null or ${session.shop} != null ? 'display:blcok' : 'display:none'"><a th:if="${session.user} != null or ${session.shop} != null" href="/logout">Logout</a></li>
+            <!--            로그아웃-->
+            <li style="border-right: 1px white"
+                th:style="${session.user} != null or ${session.shop} != null ? 'display:blcok' : 'display:none'"><a
+                    th:if="${session.user} != null or ${session.shop} != null" href="/logout">Logout</a></li>
             <li th:if="${session.shop} == null or ${session.user} != null"><a href="#Shop">Shop</a></li>
-            <li style="padding-left: 1px"><a href="#Agent">Agent</a></li>
+<!--            <li style="padding-left: 1px"><a href="#Agent">Agent</a></li>-->
             <li style="display:none"><a style="display: none" href=""></a></li>
             <li style="display: none"><a style="display: none" href=""></a></li>
-            <li th:style="${session.user} != null ? 'display:blcok' : 'display:none'"><a th:if="${session.user} != null" href="/userMypage">Mypage</a></li>
-            <li th:style="${session.shop} != null ? 'display:blcok' : 'display:none'"><a href="/shopMypage">Mypage</a></li>
+            <li th:style="${session.user} != null ? 'display:blcok' : 'display:none'"><a onclick="getId()"
+                    th:if="${session.user} != null" href="/userMypage">Mypage</a></li>
+            <li th:style="${session.shop} != null ? 'display:blcok' : 'display:none'"><a href="/shopMypage">Mypage</a>
+            </li>
             <li style="padding: 0px" th:if="${session.user} != null"><a href="#apointCheck">예약 확인</a></li>
 
             <li style="display: none"><a></a></li>
