--- a/src/main/resources/templates/layout/apointCheck.html
+++ b/src/main/resources/templates/layout/apointCheck.html
@@ -13,6 +13,19 @@
 </head>
 <body>
 <article th:fragment="apointCheck" id="apointCheck">
+    <div th:if="${session.apoint} != null">
+        <div style="background-color: white" class="container">
+            <h2 style="padding: 10px; color: black;text-align: center">예약 확인</h2>
+            <h3 style="color: black;margin-left: 100px" th:text="'지점 : ' + ${session.apoint.apointShop}"></h3>
+            <h3 style="color: black;margin-left: 100px" th:text="'디자이너 : ' + ${session.apoint.apointDesigner}"></h3>
+            <h3 style="color: black;margin-left: 100px" th:text="'컷 : ' + ${session.apoint.apointCut}"></h3>
+            <h3 style="color: black;margin-left: 100px" th:text="'펌 : ' + ${session.apoint.apointPerm}"></h3>
+            <h3 style="color: black;margin-left: 100px" th:text="'염색 : ' + ${session.apoint.apointColor}"></h3>
+            <h3 style="color: black;margin-left: 100px" th:text="'클리닉 : ' + ${session.apoint.apointClinic}"></h3>
+            <h3 style="color: black;margin-left: 100px" th:text="'날짜 : ' + ${session.apoint.apointDate}"></h3>
+            <h3 style="padding-bottom: 10px; color: black;margin-left: 100px" th:text="'시간 : ' + ${session.apoint.apointTime}"></h3>
+        </div>
+    </div>
 </article>
 </body>
 </html>
