--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -13,7 +13,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css"/>
     </noscript>
-    <!--    로그인을 하기 위한 js-->
+    <!--    로그인/예약확인을 하기 위한 js-->
     <script type="text/javascript" src="useJs/login.js"></script>
     <!--    swal(alert 대체)-->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -27,6 +27,17 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
             alert(message);
             location.href = '/main';
         }
+        /*]]>*/
+    </script>
+    <script>
+        function getId() {
+            var id = $("#apointUserId").val();
+            $.ajax({
+                url: "getApoints",
+                type: "post",
+                data: {apointUserId: id},
+            })
+        }
     </script>
 </head>
 
@@ -37,7 +48,6 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 <!--주의, 래퍼 제거시 모든 틀 제거가 되고 css, sass, js 가 적용이 되지 않아 애니메이션 적용이 안됨.
     wrapper =  전체적 컨테이너 역할-->
 <div id="wrapper">
-
 
     <!-- Header -->
     <!-- layout의 header 파일 -->
@@ -53,13 +63,14 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <!-- Shop section / 헤어샵-->
         <article th:replace="layout/ShopArticle :: #Shop"></article>
 
-        <!-- About -->
-        <article th:replace="layout/AgentArticle :: #Agent"></article>
+<!--        <article th:replace="layout/AgentArticle :: #Agent"></article>-->
 
         <!-- About -->
         <article th:replace="layout/AboutArticle :: #About"></article>
 
+
         <article th:replace="layout/Mypage :: #Mypage"></article>
+
 
         <article th:replace="layout/apointCheck :: #apointCheck"></article>
 
