--- a/src/main/resources/templates/myPageShop.html
+++ b/src/main/resources/templates/myPageShop.html
@@ -33,7 +33,6 @@
     </div>
 </header>
 
-
 <main>
     <div class="container">
         <div class="container-fluid">
@@ -41,113 +40,278 @@
 
                 <!-- 네비  -->
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                    <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home"
-                            aria-selected="true">My Page
+                    <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home"
+                            type="button" role="tab" aria-controls="nav-home" aria-selected="true">My Page
                     </button>
 
 
-                    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile"
-                            aria-selected="false"> Appointment List
+                    <button class="nav-link" id="nav-apoint-tab" data-bs-toggle="tab" data-bs-target="#nav-apoint"
+                            type="button" role="tab" aria-controls="nav-apoint" aria-selected="false"> 예약 목록
                     </button>
 
-
-                    <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact"
-                            aria-selected="false"> ext
+                    <button class="nav-link" id="nav-nav-designer-tab" data-bs-toggle="tab" data-bs-target="#nav-designer"
+                            type="button" role="tab" aria-controls="nav-designer" aria-selected="false"> 예약 목록
                     </button>
-
                 </div>
 
                 <!--------------------------------------------------------------------------------------------------------------->
+                <!--                마이페이지 회원정보 영역-->
                 <!-- 내용 넣는 곳 -->
                 <div class="p-5">
                     <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
                             <!--  회원정보 타이틀 -->
                             <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
-                                회원정보
+                                회원 정보
                             </div>
 
-
-                            <!--  회원 이름 / 텍스트 라벨-->
+                            <!-- Shop 아이디  -->
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userName" class="col-sm-3 col-form-label">이름</label>
+                                        <label for="shopId" class="col-form-label">아이디</label>
                                     </div>
-                                    <!--  회원 이름 / 텍스트 뷰 라벨 -->
+                                    <!--  Shop 아이디 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userName" class="form-control" type="text" value="이름 보여질 곳" th:value="${session.user.userName}" readonly>
+                                        <input id="shopId" class="form-control" type="text" value="ID 보여질 곳" th:value="${session.shop.shopId}" readonly>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- 회원정보 아이디  -->
+                            <!-- Shop Pw  -->
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userId" class="col-sm-3 col-form-label">ID</label>
+                                        <label for="shopPw" class="col-form-label">비밀번호</label>
                                     </div>
-                                    <!--  회원 이름 / 텍스트 뷰 라벨 -->
+                                    <!--  Shop Pw / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userId" class="form-control" type="text" value="ID 보여질 곳" th:value="${session.user.userId}" readonly>
+                                        <input id="shopPw" class="form-control" type="text" th:value="${session.shop.shopPw}" value="PW 보여질 곳" readonly>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- 회원정보 Pw  -->
+                            <!--  가게 이름 / 텍스트 라벨-->
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userPw" class="col-sm-3 col-form-label">PW</label>
+                                        <label for="shopName" class="col-form-label">가게 이름</label>
                                     </div>
-                                    <!--  회원 Pw / 텍스트 뷰 라벨 -->
+                                    <!--  가게 이름 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userPw" class="form-control" type="text" th:value="${session.user.userPw}" value="PW 보여질 곳" readonly>
+                                        <input id="shopName" class="form-control" type="text" value="이름 보여질 곳" th:value="${session.shop.shopName}" readonly>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- 회원정보 phone  -->
+                            <!--  사업자 등록번호 / 텍스트 라벨-->
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userPh" class="col-sm-3 col-form-label">Phone</label>
+                                        <label for="ownerBuisness" class="col-form-label">사업자 등록번호</label>
+                                    </div>
+                                    <!--  사업자 등록번호 / 텍스트 뷰 라벨 -->
+                                    <div class="col-10">
+                                        <input id="ownerBuisness" class="form-control" type="text" th:value="${session.shop.ownerBuisness}" readonly>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- 가게 번호  -->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="shopTel" class="col-form-label">가게 번호</label>
                                     </div>
                                     <!--  회원 phone / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userPh" class="form-control" type="tel" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" th:value="${session.user.userPh}" readonly>
+                                        <input id="shopTel" class="form-control" type="tel" th:value="${session.shop.shopTel}" readonly>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- 회원정보 Email  -->
+                            <!--                            우편번호-->
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userMail" class="col-sm-3 col-form-label">Phone</label>
+                                        <label for="shopAddrNum" class="col-form-label">우편번호</label>
                                     </div>
                                     <!--  회원 Email / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userMail" class="form-control" type="email" th:value="${session.user.userMail}" value="email 보여질 곳" readonly>
+                                        <input id="shopAddrNum" class="form-control" type="text" th:value="${session.shop.shopAddrNum}" value="우편번호" readonly>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- 신주소  -->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="shopAddrRoad" class="col-form-label">신주소</label>
+                                    </div>
+                                    <div class="col-10">
+                                        <input id="shopAddrRoad" class="form-control" type="text" th:value="${session.shop.shopAddrRoad}" value="신주소" readonly>
                                     </div>
                                 </div>
                             </div>
 
+                            <!--                            구주소-->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="shopAddrJibun" class="col-form-label">구주소</label>
+                                    </div>
+                                    <div class="col-10">
+                                        <input id="shopAddrJibun" class="form-control" type="text" th:value="${session.shop.shopAddrJibun}" value="구주소" readonly>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--                            상세주소-->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="shopAddrDetail" class="col-form-label">상세주소</label>
+                                    </div>
+                                    <div class="col-10">
+                                        <input id="shopAddrDetail" class="form-control" type="text" th:value="${session.shop.shopAddrDetail}" value="상세주소" readonly>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--                            원장명-->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="ownerName" class="col-form-label">원장 명</label>
+                                    </div>
+                                    <div class="col-10">
+                                        <input id="ownerName" class="form-control" type="text" th:value="${session.shop.ownerName}" value="원장명" readonly>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--                            원장폰-->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="ownerPh" class="col-form-label">휴대폰 번호</label>
+                                    </div>
+                                    <div class="col-10">
+                                        <input id="ownerPh" class="form-control" type="text" th:value="${session.shop.ownerPh}" value="휴대폰 번호" readonly>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--                            원장 메일-->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="ownerMail" class="col-form-label">메일</label>
+                                    </div>
+                                    <div class="col-10">
+                                        <input id="ownerMail" class="form-control" type="text" th:value="${session.shop.ownerMail}" value="원장 메일" readonly>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--                            원장 성별-->
+                            <div class="text-center">
+                                <div class="row g-3 p-3">
+                                    <div class="col-2">
+                                        <label for="ownerGen" class="col-form-label">성별</label>
+                                    </div>
+                                    <div class="col-10">
+                                        <!-- M일때는 남자, F일때는 여자-->
+                                        <input id="ownerGen" class="form-control" type="text" th:if="${session.shop.ownerGen} =='M' " value="남자" readonly>
+                                        <input id="ownerGen" class="form-control" type="text" th:if="${session.shop.ownerGen} =='F' " value="여자" readonly>
+                                    </div>
+                                </div>
+                            </div>
+
+
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">
-                                <button class="btn btn-outline-dark me-md-2" type="button">수정</button>
-                                <button class="btn btn-outline-secondary" type="button">취소</button>
+                                <button class="btn btn-outline-dark me-md-2" type="button"
+                                        onclick="location.href='/myPageShopUpdate'">수정
+                                </button>
+                                <button id="btn-back" class="btn btn-outline-dark me-md-2" type="button"
+                                        onclick="location.href='/main'">Home
+                                </button>
                             </div>
                         </div>
                     </div>
+
+                    <div class="tab-content" id="nav-apoint-tabContent">
+                        <div class="tab-pane fade show" id="nav-apoint" role="tabpanel" aria-labelledby="nav-apoint-tab" tabinde>
+                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
+                                예약 내역
+                            </div>
+                            <table th:if="${session.apoints} != null" class="table">
+                                <thead class="table-dark">
+                                <tr>
+                                    <th>지점</th>
+                                    <th>디자이너</th>
+                                    <th>컷</th>
+                                    <th>펌</th>
+                                    <th>염색</th>
+                                    <th>클리닉</th>
+                                    <th>날짜</th>
+                                    <th>시간</th>
+                                </tr>
+                                </thead>
+                                <tbody class="table-striped">
+                                <tr th:each="apointsList:${session.apoints}">
+                                    <td th:text="${apointsList.apointShop}"></td>
+                                    <td th:text="${apointsList.apointDesigner}"></td>
+                                    <td th:text="${apointsList.apointCut}"></td>
+                                    <td th:text="${apointsList.apointPerm}"></td>
+                                    <td th:text="${apointsList.apointColor}"></td>
+                                    <td th:text="${apointsList.apointClinic}"></td>
+                                    <td th:text="${apointsList.apointDate}"></td>
+                                    <td th:text="${apointsList.apointTime}"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <h2 th:if="${session.apoints} == null">조회된 예약내역이 없습니다.</h2>
+                        </div>
+                    </div>
+
+                    <!--디자이너 추가 -->
+                    <div class="tab-content" id="nav-plus-designer">
+                        <div class="tab-pane fade show" id="nav-designer" role="tabpanel" aria-labelledby="nav-designer-tab" tabinde="0">
+                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
+                                디자이너
+                            </div>
+
+                            <table class="table text-center">
+                                <thead class="table-dark">
+                                <tr>
+                                    <th th:each="">head Name</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>name</td>
+                                </tr>
+                                </tbody>
+                            </table>
+
+                        </div>
+                    </div>
+
                 </div>
             </form>
         </div>
     </div>
+
+
+    <!--    마이페이지 예약 목록 영역-->
+
 
 </main>
 
 <!--footer-->
 <footer th:replace="layout/Footer :: mainFooter"></footer>
 
+</body>
 </body>
 </html>
