--- a/src/main/resources/templates/myPageUser.html
+++ b/src/main/resources/templates/myPageUser.html
@@ -1,13 +1,33 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>My Page </title>
+    <title>마이페이지</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
             crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <!--    <script>-->
+    <!--        $(document).r-->
+    <!--    </script>-->
+
+    <!--    마이페이지로 세션 값 없이 바로 접근시 처리하기 위한 스크립트-->
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        if ([[${message}]] != null) {
+            var message = [[${message}]];
+            alert(message);
+            location.href = "/main";
+        }
+        /*]]>*/
+    </script>
+    <style>
+        .table th, .table td {
+            text-align: center;
+            vertical-align: middle !important;
+        }
+    </style>
 </head>
 
 <body>
@@ -21,10 +41,11 @@
     </div>
 </header>
 
+
 <main>
     <div class="container">
         <div class="container-fluid">
-            <form class="border border-secondary rounded-3 p-5" action="/myPageUserUpdate">
+            <form class="border border-secondary rounded-3 p-5">
 
                 <!-- 네비  -->
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -32,13 +53,18 @@
                             type="button" role="tab" aria-controls="nav-home" aria-selected="true">My Page
                     </button>
 
-                    <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact"
-                            type="button" role="tab" aria-controls="nav-contact" aria-selected="false"> ext
+
+                    <button class="nav-link" id="nav-apoint-tab" data-bs-toggle="tab" data-bs-target="#nav-apoint"
+                            type="button" role="tab" aria-controls="nav-apoint" aria-selected="false"> 예약 목록
                     </button>
 
+                    <button class="nav-link" id="nav-view-tab" data-bs-toggle="tab" data-bs-target="#nav-review"
+                            type="button" role="tab" aria-controls="nav-apoint" aria-selected="false"> 리뷰 목록
+                    </button>
                 </div>
 
                 <!--------------------------------------------------------------------------------------------------------------->
+                <!--                마이페이지 회원정보 영역-->
                 <!-- 내용 넣는 곳 -->
                 <div class="p-5">
                     <div class="tab-content" id="nav-tabContent">
@@ -68,9 +94,9 @@
                                     <div class="col-2">
                                         <label for="userId" class="col-sm-3 col-form-label">ID</label>
                                     </div>
-                                    <!--  회원 이름 / 텍스트 뷰 라벨 -->
+                                    <!--  회원 아이디 / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userId" class="form-control" type="text" th:value="${session.user.userId}" readonly>
+                                        <input id="userId" class="form-control" type="text" value="ID 보여질 곳" th:value="${session.user.userId}" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -83,7 +109,7 @@
                                     </div>
                                     <!--  회원 Pw / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userPw" class="form-control" type="text" th:value="${session.user.userPw}" readonly>
+                                        <input id="userPw" class="form-control" type="text" th:value="${session.user.userPw}" value="PW 보여질 곳" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -105,29 +131,111 @@
                             <div class="text-center">
                                 <div class="row g-3 p-3">
                                     <div class="col-2">
-                                        <label for="userMail" class="col-sm-3 col-form-label">Email</label>
+                                        <label for="userMail" class="col-sm-3 col-form-label">Phone</label>
                                     </div>
                                     <!--  회원 Email / 텍스트 뷰 라벨 -->
                                     <div class="col-10">
-                                        <input id="userMail" class="form-control" type="email" th:value="${session.user.userMail}" readonly>
+                                        <input id="userMail" class="form-control" type="email" th:value="${session.user.userMail}" value="email 보여질 곳" readonly>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">
-                                <button class="btn btn-outline-dark me-md-2" type="button" onclick="location.href='/myPageUserUpdate'">수정</button>
-                                <button id="btn-back" class="btn btn-outline-dark me-md-2" type="button" onclick="location.href='/main'">Home</button>
 
+                            <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">
+                                <button class="btn btn-outline-dark me-md-2" type="button"
+                                        onclick="location.href='/myPageUserUpdate'">수정
+                                </button>
+                                <button id="btn-back" class="btn btn-outline-dark me-md-2" type="button"
+                                        onclick="location.href='/main'">Home
+                                </button>
                             </div>
                         </div>
+                    </div>
+
+
+                    <div class="tab-content" id="nav-apoint-tabContent">
+                        <div class="tab-pane fade show" id="nav-apoint" role="tabpanel" aria-labelledby="nav-apoint-tab" tabinde>
+                            <div class="h4 pb-2 mb-4 text-black border-bottom border-secondary">
+                                예약 내역
+                            </div>
+                            <table th:if="${session.apoints} != null" class="table">
+                                <thead class="table-dark">
+                                <tr>
+                                    <th>지점</th>
+                                    <th>디자이너</th>
+                                    <th>컷</th>
+                                    <th>펌</th>
+                                    <th>염색</th>
+                                    <th>클리닉</th>
+                                    <th>날짜</th>
+                                    <th>시간</th>
+                                    <th>리뷰작성</th>
+                                </tr>
+                                </thead>
+                                <tbody class="table-striped">
+                                <tr th:each="apointsList:${session.apoints}">
+                                    <td th:text="${apointsList.apointShop}"></td>
+                                    <td th:text="${apointsList.apointDesigner}"></td>
+                                    <td th:text="${apointsList.apointCut}"></td>
+                                    <td th:text="${apointsList.apointPerm}"></td>
+                                    <td th:text="${apointsList.apointColor}"></td>
+                                    <td th:text="${apointsList.apointClinic}"></td>
+                                    <td th:text="${apointsList.apointDate}"></td>
+                                    <td th:text="${apointsList.apointTime}"></td>
+                                    <td><button class="btn btn-outline-dark" type="button" onclick="location.href='/shopReviewWriter'">리뷰 작성</button></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <h2 th:if="${session.apoints} == null">조회된 예약내역이 없습니다.</h2>
+                        </div>
+                    </div>
+
+                    <div class="tab-content" id="nav-view-review">
+                        <div class="tab-pane fade" id="nav-review" role="tabpanel" aria-labelledby="nav-view-tab" tabinde="0">
+                            <table class="table table-hover text-center" th:if="${reviewList.size()} > 0">
+                                <colgroup>
+                                    <col width="10%">
+                                    <col width="50%">
+                                    <col width="15%">
+                                </colgroup>
+                                <thead class="table-dark">
+                                <tr>
+                                    <th>No.</th>
+                                    <th>Content</th>
+                                    <!--                                    <th colspan="3">Title</th>-->
+                                    <th>Date</th>
+                                    <!--                        <th>Like</th>-->
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="list:${reviewList}">
+                                    <td th:text="${list.reIdx}"></td>
+                                    <td th:text="${list.reContent}"></td>
+
+                                    <!--                                    <td colspan="3"><a href="/shopReviewDetail?reIdx=" th:attrappend="href=${list.reIdx}" th:text="${list.reTitle}"></a></td>-->
+                                    <!--                                    <td th:text="${list.reWriter}"></td>-->
+                                    <td th:text="${list.reCreate}"></td>
+                                    <!--                        <td th:text="${list.reLike}"></td>-->
+                                </tr>
+                                </tbody>
+                            </table>
+                            <h2 class="text-center" th:if="${reviewList.size()} == 0"> 조회된 결과가 없습니다.</h2>
+                            <!--                            <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">-->
+                            <!--                                <button class="btn btn-outline-dark me-md-2" type="button" onclick="location.href='/shopReviewWriter'">글 쓰기</button>-->
+                            <!--                            </div>-->
+                        </div>
+
                     </div>
                 </div>
             </form>
         </div>
     </div>
 
-</main>
 
+    <!--    마이페이지 예약 목록 영역-->
+
+
+</main>
 
 <!--footer-->
 <footer th:replace="layout/Footer :: mainFooter"></footer>
