--- a/src/main/resources/templates/review/shopReviewDetail.html
+++ b/src/main/resources/templates/review/shopReviewDetail.html
@@ -1,6 +1,6 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>-Review page- Write</title>
+    <title>-Review page- view page</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,23 +26,17 @@
 <main>
     <div class="container">
         <div class="container-fluid">
-            <form class="row g-3 border border-secondary rounded-3 p-5" id="frm" name="frm" method="post" action="/shopReviewIn">
+            <form class="row g-3 border border-secondary rounded-3 p-5" id="frm" name="frm" method="post" action="">
 
                 <div class="col-md-4 form-floating">
-                    <input type="text" class="form-control" id="reCreate" name="reCreate" th:value="${#calendars.format(#calendars.createNow(), 'yyyy-MM-dd')}" placeholder="작성 날짜" readonly>
+                    <input type="text" class="form-control" id="reCreate" name="reCreate" th:value="${}"  placeholder="작성 날짜" readonly>
                     <label for="reCreate" class="form-label">작성 날짜</label>
                 </div>
 
                 <div class="col-md-4 form-floating">
-                    <input type="text" class="form-control" id="?" name="?" placeholder="디자이너">
-                    <label for="?" class="form-label">디자이너</label>
-                </div>
-
-                <div class="col-md-4 form-floating" hidden>
-                    <input type="text" class="form-control" id="reWriter" name="reWriter" th:value="${session.user.userId}" placeholder="작성자" readonly>
+                    <input type="text" class="form-control" id="reWriter" name="reWriter" placeholder="작성자" readonly>
                     <label for="reWriter" class="form-label">작성자</label>
                 </div>
-
 
                 <div class="col-md-4 form-floating">
                     <input type="text" class="form-control" id="reShop" name="reShop" placeholder="작성자">
@@ -60,8 +54,8 @@
                 </div>
 
                 <div class="d-grid gap-4 d-md-flex justify-content-end">
-                    <button id="" class="btn btn-outline-dark" type="submit">확인</button>
-                    <button id="btn-back" class="btn btn-outline-secondary" type="reset">뒤로가기</button>
+                    <button id="" class="btn btn-outline-dark" type="submit">수정</button>
+                    <button id="btn-back" class="btn btn-outline-secondary" type="reset">삭제</button>
                 </div>
             </form>
         </div>
